[gd_scene load_steps=24 format=3 uid="uid://bxywb3yjrleiy"]

[ext_resource type="PackedScene" uid="uid://cxrkef56qxet5" path="res://scenes/laser_turret/rotating_laser_turret_state.tscn" id="1_1gjbq"]
[ext_resource type="Script" path="res://scenes/laser_turret/rotating_laser_turret.gd" id="1_3x2r2"]
[ext_resource type="Texture2D" uid="uid://btrjdyh1benqo" path="res://resources/art/rotating_laser_turret_sheet.png" id="2_kp3vw"]
[ext_resource type="PackedScene" uid="uid://h3sc2rotjuyx" path="res://scenes/z_ordering.tscn" id="2_lysyd"]
[ext_resource type="PackedScene" uid="uid://d73k7twb32tq" path="res://scenes/laser_turret/rotating_laser_turret_idle.tscn" id="2_xc8g8"]
[ext_resource type="Texture2D" uid="uid://bidqsr7cq3ous" path="res://resources/art/laser-turret-sheet.png" id="3_pn4a2"]
[ext_resource type="PackedScene" uid="uid://dwqiyol6kfj14" path="res://scenes/world_objects/force_field_world.tscn" id="3_su3uc"]
[ext_resource type="PackedScene" uid="uid://dc8ua84q8wlw1" path="res://scenes/laser_turret/rotating_laser_turret_priming.tscn" id="3_ujnjn"]
[ext_resource type="PackedScene" uid="uid://dsv72jbnb84xt" path="res://scenes/ui/interactable.tscn" id="4_f3u75"]
[ext_resource type="PackedScene" uid="uid://cqi3yeshg8klk" path="res://scenes/laser_turret/rotating_laser_turret_activated.tscn" id="4_t2vdw"]
[ext_resource type="Texture2D" uid="uid://dhwrv3ysnfn6s" path="res://resources/art/laser.png" id="4_yet2n"]
[ext_resource type="PackedScene" uid="uid://b4pkdnm5o1vw6" path="res://scenes/laser_turret/rotating_laser_turret_breaking.tscn" id="5_qrhec"]
[ext_resource type="PackedScene" uid="uid://drpuukbwhfu5y" path="res://scenes/laser_turret/rotating_laser_turret_broken.tscn" id="6_yt6hw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_npstd"]
radius = 26.0
height = 88.0

[sub_resource type="Animation" id="Animation_icujo"]
resource_name = "rotating_laser_turret_idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(6.75, 6.75), Vector2(6.75, 6), Vector2(6.75, 6.75)]
}

[sub_resource type="Animation" id="Animation_anjnt"]
resource_name = "rotating_laser_turret_priming"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.733333, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.75, 6.75), Vector2(6.75, 5.75), Vector2(6.75, 7.75), Vector2(6.75, 6.75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -25), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4gma3"]
resource_name = "rotating_laser_turret_activated"
length = 2.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0), Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0), Vector2i(15, 0), Vector2i(16, 0), Vector2i(17, 0), Vector2i(18, 0), Vector2i(19, 0), Vector2i(20, 0), Vector2i(21, 0), Vector2i(22, 0), Vector2i(23, 0), Vector2i(24, 0), Vector2i(25, 0), Vector2i(26, 0), Vector2i(27, 0), Vector2i(28, 0), Vector2i(29, 0), Vector2i(30, 0), Vector2i(31, 0), Vector2i(32, 0), Vector2i(33, 0), Vector2i(34, 0), Vector2i(35, 0), Vector2i(36, 0), Vector2i(37, 0), Vector2i(38, 0), Vector2i(39, 0), Vector2i(40, 0), Vector2i(41, 0), Vector2i(42, 0), Vector2i(43, 0)]
}

[sub_resource type="Animation" id="Animation_6kwha"]
resource_name = "rotating_laser_turret_breaking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_sjxu8"]
resource_name = "rotating_laser_turret_broken"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_b2ug0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6.75, 6.75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1632"]
_data = {
"RESET": SubResource("Animation_b2ug0"),
"rotating_laser_turret_activated": SubResource("Animation_4gma3"),
"rotating_laser_turret_breaking": SubResource("Animation_6kwha"),
"rotating_laser_turret_broken": SubResource("Animation_sjxu8"),
"rotating_laser_turret_idle": SubResource("Animation_icujo"),
"rotating_laser_turret_priming": SubResource("Animation_anjnt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3u3jt"]
size = Vector2(80.6667, 136.573)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4figc"]
size = Vector2(80.6667, 136.573)

[node name="RotatingLaserTurret0" type="RigidBody2D"]
mass = 5.0
gravity_scale = 0.0
lock_rotation = true
freeze = true
freeze_mode = 1
linear_damp_mode = 1
linear_damp = 100.0
script = ExtResource("1_3x2r2")
_movable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -44)
shape = SubResource("CapsuleShape2D_npstd")

[node name="RotatingLaserTurretState" parent="." node_paths=PackedStringArray("_turret", "_animation_player", "_laser_sprite", "_laser_raycast") instance=ExtResource("1_1gjbq")]
_turret = NodePath("..")
_animation_player = NodePath("../AnimationPlayer")
_laser_sprite = NodePath("../RayCast2D/Laser")
_laser_raycast = NodePath("../RayCast2D")
_initial_state = "RotatingLaserTurretPriming"

[node name="RotatingLaserTurretIdle" parent="RotatingLaserTurretState" instance=ExtResource("2_xc8g8")]

[node name="RotatingLaserTurretPriming" parent="RotatingLaserTurretState" instance=ExtResource("3_ujnjn")]

[node name="RotatingLaserTurretActivated" parent="RotatingLaserTurretState" instance=ExtResource("4_t2vdw")]

[node name="RotatingLaserTurretBreaking" parent="RotatingLaserTurretState" instance=ExtResource("5_qrhec")]

[node name="RotatingLaserTurretBroken" parent="RotatingLaserTurretState" instance=ExtResource("6_yt6hw")]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(6.75, 6.75)
texture = ExtResource("2_kp3vw")
offset = Vector2(0, -16)
hframes = 44

[node name="Spark" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-1.03704, -13.037)
texture = ExtResource("3_pn4a2")
hframes = 22
vframes = 8
frame = 132

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-27, -80)
enabled = false
target_position = Vector2(-1000, 0)
collision_mask = 3
collide_with_areas = true

[node name="Laser" type="Sprite2D" parent="RayCast2D"]
visible = false
texture = ExtResource("4_yet2n")
offset = Vector2(-32, 0)

[node name="ZOrderingMarker" type="Marker2D" parent="RayCast2D/Laser"]
position = Vector2(-161, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y1632")
}

[node name="ZOrdering" parent="." instance=ExtResource("2_lysyd")]

[node name="ForceFieldWorld" parent="." instance=ExtResource("3_su3uc")]
position = Vector2(0, -70)
scale = Vector2(7, 7)
_temporary = false

[node name="ForceFieldInteractable" parent="." instance=ExtResource("4_f3u75")]
_hold_to_interact = true

[node name="InteractLabel" parent="ForceFieldInteractable" index="0"]
offset_top = -207.0
offset_bottom = -119.0

[node name="CollisionShape2D" parent="ForceFieldInteractable/InteractArea" index="0"]
position = Vector2(1.5, -32)
shape = SubResource("RectangleShape2D_3u3jt")

[node name="ControlInteractable" parent="." instance=ExtResource("4_f3u75")]
_hold_to_interact = true

[node name="InteractLabel" parent="ControlInteractable" index="0"]
offset_top = -207.0
offset_bottom = -119.0

[node name="CollisionShape2D" parent="ControlInteractable/InteractArea" index="0"]
position = Vector2(1.5, -32)
shape = SubResource("RectangleShape2D_4figc")

[node name="CenterMarker" type="Marker2D" parent="."]
position = Vector2(0, -79)

[connection signal="animation_finished" from="AnimationPlayer" to="RotatingLaserTurretState" method="_on_animation_player_animation_finished"]
[connection signal="interact" from="ForceFieldInteractable" to="." method="_on_force_field_interactable_interact"]
[connection signal="interact" from="ControlInteractable" to="." method="_on_control_interactable_interact"]

[editable path="ForceFieldInteractable"]
[editable path="ControlInteractable"]
